tests/cpp/static-assert-fail.cpp
// EXPECT-ERROR
// CHECK-ERR: Serious error: static assertion failed

static_assert(false, "boom");
